tests/NormalTests/paczka1/fuzzy1/80579836.err
Error in line 8: cYHYw2TSL A451 46,7
Error in line 10: cYHYw2TSL S801 83,4
Error in line 9: ez1f S801 15,4
Error in line 13: ez1f A846 60,2
Error in line 22: ez1f SW01 12W,7
Error in line 12: cYHYw2TSL A846 97,9
